[gd_scene load_steps=3 format=3 uid="uid://dym7s06k4s3tj"]

[ext_resource type="Script" path="res://src/chat/ChatWindow.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://stuuggi1hibd" path="res://src/chat/config/ChannelConfigDialog.tscn" id="2"]

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
follow_focus = true

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/PanelContainer/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Bot Name"

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
clip_text = true

[node name="EndReply" type="Button" parent="VBoxContainer/HBoxContainer/VBox/HBox"]
layout_mode = 2
text = "X"
flat = true

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Say as Bot"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Send" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
text = "Send"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Config" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer2"]
layout_mode = 2
text = "Configure"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Part" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer3"]
layout_mode = 2
text = "Part Channel"

[node name="ChannelConfigDialog" parent="." instance=ExtResource("2")]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBox/HBox/EndReply" to="." method="_on_EndReply_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer2/Config" to="." method="_on_Config_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer3/Part" to="." method="_on_Part_pressed"]
[connection signal="about_to_popup" from="ChannelConfigDialog" to="." method="_on_ChannelConfigDialog_about_to_show"]
[connection signal="close_requested" from="ChannelConfigDialog" to="." method="_on_ChannelConfigDialog_close_requested"]
